Made sure invite box error message does not spill over grey text; Incorporated Josh's fix for the height of the inputs in FF

--- a/web/public/css/style.css
+++ b/web/public/css/style.css
@@ -175,7 +175,6 @@ input {
 	width: 120px;
 /*	border: 1px solid #ccc; */
 	border: none;
-	height: 10px;
 	padding: 10px 10px;
 	background-color: #f7f7f7;
 	/*background-image: url(../images/form.png);
